[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/ui/Roboto.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Lobby.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_right = 50.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 500.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "DUNGEON RPG"
align = 1

[node name="Host" type="Button" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 500.0
margin_bottom = 89.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 1 )
text = "Host"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 500.0
margin_bottom = 163.0
rect_min_size = Vector2( 0, 70 )

[node name="InputUsername" type="LineEdit" parent="VBoxContainer"]
margin_top = 167.0
margin_right = 500.0
margin_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Username"

[node name="InputIP" type="LineEdit" parent="VBoxContainer"]
margin_top = 205.0
margin_right = 500.0
margin_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "IP Address"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 500.0
margin_bottom = 293.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 1 )
text = "Join"

[connection signal="button_up" from="VBoxContainer/Host" to="." method="_on_Host_button_up"]
[connection signal="button_up" from="VBoxContainer/Join" to="." method="_on_Join_button_up"]
